--- a/website/templates/website/selections/list.html
+++ b/website/templates/website/selections/list.html
@@ -1,6 +1,5 @@
 {% extends 'website/base.html' %}
 {% load calc_finished_projects %}
-{% load project_done %}
 {% load humanize %}
 {% block title %}Project Selections{% endblock %}
 {% block projectsactive %}active{% endblock %}
@@ -32,17 +31,21 @@
                     <tr>
                         <th>Project Selection</th>
                         <th>Submitted</th>
-                        <th># Benchmark Projects</th>
-                        <th>Options</th>
+                        <th># Projects in Dataset</th>
+                        <th class="text-right">Options</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     {% for project in projects %}
+                        {% if project.enabled %}
                         <tr>
+                        {% else %}
+                        <tr class="danger">
+                        {% endif %}
                             <td><a href="{% url 'website:selection_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created|naturalday }}</td>
-                            <td>{% if not project|project_done %}
+                            <td>{% if not project.isDone %}
                                 <span class="glyphicon glyphicon-refresh spinning" aria-hidden="true"></span> processing...
                             {% else %}
                                 {% calc_finished_projects project as finished_count %}
@@ -51,19 +54,25 @@
                             <td>
                                 <div class="pull-right clearfix">
                                     <div class="btn-group">
-                                        <a href="{% url 'website:selection_detail' slug=project.slug %}" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View</a>
-                                        <a href="" title="Duplicate" role="button" class="btn btn-default"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span><span class="sr-only">Duplicate</span></a>
-                                        {% if project|project_done %}
-                                            <a href="{% url 'website:create_transform_selection' slug=project.slug %}" title="Transform" role="button" class="btn btn-success"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-random" aria-hidden="true"></span><span class="sr-only">Transform</span></a>
-                                        {% endif %}
+                                        {% url 'website:selection_detail' slug=project.slug as targeturl %}
+                                        {% include 'website/button.html' with disabled=False enabled=True type='primary' icon='eye-open' text='View' title='' %}
+                                        {% include 'website/button.html' with disabled=False enabled=True type='default' icon='duplicate' text='' title='Duplicate' targeturl='' %}
+                                        {% url 'website:create_transform_selection' slug=project.slug as targeturl %}
+                                        {% include 'website/button.html' with disabled=False enabled=project.isDone type='success' icon='random' text='' title='Transform' %}
                                     </div>
                                     <div class="btn-group">
-                                        <a href="{% url 'website:delete_selection' slug=project.slug %}" title="Delete" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                                        {% if project.enabled %}
+                                            {% url 'website:delete_selection' slug=project.slug as targeturl %}
+                                            {% include 'website/button.html' with disabled=False enabled=True type='danger' icon='trash' text='' title='Delete' %}
+                                        {% else %}
+                                            {% url 'website:restore_selection' slug=project.slug as targeturl %}
+                                            {% include 'website/button.html' with disabled=False enabled=True type='warning' icon='ok-sign' text='' title='Restore' %}
+                                        {% endif %}
                                     </div>
                                 </div>
                             </td>
                         </tr>
-                    {% empty%}
+                    {% empty %}
                         <tr>
                             <td colspan="4">You currently have no project selections.</td>
                         </tr>
