--- a/website/templates/website/policies/privacy.html
+++ b/website/templates/website/policies/privacy.html
@@ -1,5 +1,6 @@
 {% extends 'website/base.html' %}
 {% block title %}Privacy Policy{% endblock %}
+{% block privacyactive %}active{% endblock %}
 {% block body %}
     <div class="container">
         <div class="row">
