--- a/website/templates/website/policies/terms.html
+++ b/website/templates/website/policies/terms.html
@@ -1,5 +1,6 @@
 {% extends 'website/base.html' %}
 {% block title %}Terms of Use{% endblock %}
+{% block tosactive %}active{% endblock %}
 {% block body %}
     <div class="container">
         <div class="row">
