--- a/website/templates/website/selections/create.html
+++ b/website/templates/website/selections/create.html
@@ -1,5 +1,6 @@
 {% extends "website/base.html" %}
 {% block title %}Project Selection{% endblock %}
+{% block createselactive %}active{% endblock %}
 {% block body %}
 <div class="container">
     <div class="row">
