--- a/website/templates/website/selections/list.html
+++ b/website/templates/website/selections/list.html
@@ -2,7 +2,7 @@
 {% load calc_finished_projects %}
 {% load humanize %}
 {% block title %}Project Selections{% endblock %}
-{% block projectsactive %}active{% endblock %}
+{% block listselectionsactive %}active{% endblock %}
 {% block style %}
 <style type="text/css">
 .glyphicon.spinning {
