--- a/website/templates/website/transforms/list.html
+++ b/website/templates/website/transforms/list.html
@@ -2,7 +2,7 @@
 {% load calc_finished_projects %}
 {% load humanize %}
 {% block title %}Project Transforms{% endblock %}
-{% block projectsactive %}active{% endblock %}
+{% block listtransformsactive %}active{% endblock %}
 {% block style %}
 <style type="text/css">
 .glyphicon.spinning {
