--- a/website/templates/website/user/password_change.html
+++ b/website/templates/website/user/password_change.html
@@ -1,6 +1,6 @@
 {% extends 'website/base.html' %}
 {% block title %}Change Password{% endblock %}
-{% block profileactive %}active{% endblock %}
+{% block passwordactive %}active{% endblock %}
 {% block body %}
     <div class="container-fluid">
         <div class="panel panel-default">
