--- a/website/templates/website/policies/terms.html
+++ b/website/templates/website/policies/terms.html
@@ -3,6 +3,7 @@
 {% block tosactive %}active{% endblock %}
 {% block body %}
     <div class="container">
+        {% include 'website/messages.html' %}
         <div class="row">
             <div class="col-xs-12">
                 <h1>Terms of Use Policy</h1>
