--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -59,17 +59,13 @@
                     <li class="dropdown profile-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><img alt="profile photo for {{ user.username }}" class="img-rounded img-responsive" width="38" height="38" src="{{ user.profile.photo.url }}"  /> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li class="text-center">Signed in as <strong>{{ user.username }}</strong></li>
+                            <li class="dropdown-header">Signed in as <strong>{{ user.username }}</strong></li>
                             <li role="separator" class="divider"></li>
                             <li class="{% block profileactive %}{% endblock %}"><a href="{% url 'website:edit_profile' %}">Your profile</a></li>
                             <li class="{% block passwordactive %}{% endblock %}"><a href="{% url 'website:password_change' %}">Change Password</a></li>
                             {% if user.is_staff %}
                                 <li><a href="{% url 'admin:index' %}">Admin</a></li>
                             {% endif %}
-                            <li role="separator" class="divider"></li>
-                            <li class="{% block createselactive %}{% endblock %}"><a href="{% url 'website:create_selection' %}">New project selection</a></li>
-                            <li class="{% block listselectionsactive %}{% endblock %}"><a href="{% url 'website:list_selections' %}">List project selections</a></li>
-                            <li class="{% block listtransformsactive %}{% endblock %}"><a href="{% url 'website:list_transforms' %}">List project transforms</a></li>
                             <li role="separator" class="divider"></li>
                             <li class="{% block tosactive %}{% endblock %}"><a href="{% url 'website:tos' %}">Terms of Use Policy</a></li>
                             <li class="{% block privacyactive %}{% endblock %}"><a href="{% url 'website:privacy_policy' %}">Privacy Policy</a></li>
@@ -79,6 +75,14 @@
                     </li>
                 {% endif %}
             </ul>
+
+            {% if user.is_authenticated %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="{% block createselactive %}{% endblock %}"><a href="{% url 'website:create_selection' %}" title="New Project Selection"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="sr-only">New Project</span> Selection</a></li>
+                    <li class="{% block listselectionsactive %}{% endblock %}"><a href="{% url 'website:list_selections' %}" title="List Project Selections"><span class="glyphicon glyphicon-list" aria-hidden="true"></span><span class="sr-only">List</span> Selections</a></li>
+                    <li class="{% block listtransformsactive %}{% endblock %}"><a href="{% url 'website:list_transforms' %}" title="List Project Transforms"><span class="glyphicon glyphicon-list" aria-hidden="true"></span><span class="sr-only">List</span> Transforms</a></li>
+                </ul>
+            {% endif %}
         </div>
     </nav>
 </header>
