--- a/website/templates/website/button.html
+++ b/website/templates/website/button.html
@@ -14,5 +14,5 @@
         if title is used, it will only display on hover
 {% endcomment %}
 {% block body %}
-<a {% if enabled or not disabled %}href="{{ targeturl }}" {% else %}onclick="javascript:return false;" {% endif %}role="button" class="btn btn-{{ type }}{% if not enabled or disabled %} disabled" tabindex="-1" aria-disabled="true" disabled="disabled{% endif %}"{% if title %} title="{{ title }}"{% endif %}><span class="glyphicon glyphicon-{{ icon }}" aria-hidden="true"></span>{% if not title %} {{ text }}{% else %}<span class="sr-only">{{ title }}</span>{% endif %}</a>
+<a {% if enabled and not disabled %}href="{{ targeturl }}" {% else %}href="#" onclick="javascript:return false;" {% endif %}role="button" class="btn btn-{{ type }}{% if not enabled or disabled %} disabled" tabindex="-1" aria-disabled="true" disabled="disabled{% endif %}"{% if title %} title="{{ title }}"{% endif %}><span class="glyphicon glyphicon-{{ icon }}" aria-hidden="true"></span>{% if not title %} {{ text }}{% else %}<span class="sr-only">{{ title }}</span>{% endif %}</a>
 {% endblock %}
