--- a/website/templates/website/form-field.html
+++ b/website/templates/website/form-field.html
@@ -1,26 +1,20 @@
 {% load widget_tweaks %}
+<div class="form-group{% if form.is_bound and field.errors %} has-error has-feedback{% endif %}">
+    {{ field.label_tag }}
 
-{% if form.is_bound and field.errors %}
-    <div class="form-group has-error has-feedback">
-{% else %}
-    <div class="form-group">
-{% endif %}
+    {% render_field field class="form-control" %}
 
-{{ field.label_tag }}
+    {% if form.is_bound and field.errors %}
+        <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+        <span class="sr-only">(error)</span>
+        {% for error in field.errors %}
+            <div class="help-block">
+                {{ error }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
-{% render_field field class="form-control" %}
-
-{% if form.is_bound and field.errors %}
-    <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-    <span class="sr-only">(error)</span>
-    {% for error in field.errors %}
-        <div class="help-block">
-            {{ error }}
-        </div>
-    {% endfor %}
-{% endif %}
-
-{% if field.help_text %}
-    <div class="help-block small">{{ field.help_text }}</div>
-{% endif %}
+    {% if field.help_text %}
+        <div class="help-block small">{{ field.help_text }}</div>
+    {% endif %}
 </div>
