--- a/website/templates/website/form.html
+++ b/website/templates/website/form.html
@@ -1,14 +1,4 @@
-{% for hidden_field in form.hidden_fields %}
-    {{ hidden_field }}
-{% endfor %}
-
-{% if form.non_field_errors %}
-    <div class="alert alert-danger" role="alert">
-        {% for error in form.non_field_errors %}
-            {{ error }}
-        {% endfor %}
-    </div>
-{% endif %}
+{% include 'website/form-header.html' %}
 
 {% for field in form.visible_fields %}
     {% include 'website/form-field.html' %}
