--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -3,6 +3,7 @@
 {% block fundingactive %}active{% endblock %}
 {% block body %}
     <div class="container">
+        {% include 'website/messages.html' %}
         <div class="row">
             <div class="col-xs-12">
                 <h1>Funding</h1>
@@ -20,7 +21,7 @@
             <div class="col-xs-8 col-md-10">
                 <p>This project is partially supported by the U.S. National Science Foundation (NSF) under the following grants:</p>
                 <ul>
-                    <li>CNS-18-23357: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1823357">CRI: CI-P: Collaborative: Towards a Program Analysis Collaboratory</a>. PI: Elena Sherman (2018-2019)</li>
+                    <li>CNS-18-23357: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1823357">CRI: CI-P: Collaborative: Towards a Program Analysis Collaboratory</a>. PI: Elena Sherman (2018-2020)</li>
                     <li>CNS-18-23294: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1823294">CRI: CI-P: Collaborative: Towards a Program Analysis Collaboratory</a>. PI: Robert Dyer (2018-2020)</li>
                 </ul>
             </div>
