--- a/website/templates/website/messages.html
+++ b/website/templates/website/messages.html
@@ -1,8 +1,13 @@
+{% if IS_MAINT_MODE %}
+    <div class="text-center alert alert-warning fade in" role="alert">
+        The site is currently in maintenance mode and has limited functionality.
+    </div>
+{% endif %}
 {% for message in messages%}
-<div class="alert {{ message.tags }} alert-dismissible fade in" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-    {{ message }}
-</div>
+    <div class="alert {{ message.tags }} alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        {{ message }}
+    </div>
 {% endfor %}
