--- a/website/templates/website/policies/privacy.html
+++ b/website/templates/website/policies/privacy.html
@@ -3,6 +3,7 @@
 {% block privacyactive %}active{% endblock %}
 {% block body %}
     <div class="container">
+        {% include 'website/messages.html' %}
         <div class="row">
             <div class="col-xs-12">
                 <h1>Privacy Policy</h1>
