--- a/website/templates/website/selections/list.html
+++ b/website/templates/website/selections/list.html
@@ -30,9 +30,9 @@
                 <thead>
                     <tr>
                         <th>Project Selection</th>
-                        <th>Submitted</th>
+                        <th>Submitted <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></th>
                         <th># Projects in Dataset</th>
-                        <th class="text-right">Options</th>
+                        <th class="text-right">Actions</th>
                     </tr>
                 </thead>
 
@@ -56,7 +56,8 @@
                                     <div class="btn-group">
                                         {% url 'website:selection_detail' slug=project.slug as targeturl %}
                                         {% include 'website/button.html' with disabled=False enabled=True type='primary' icon='eye-open' text='View' title='' %}
-                                        {% include 'website/button.html' with disabled=False enabled=True type='default' icon='duplicate' text='' title='Duplicate' targeturl='' %}
+                                        {% url 'website:selection_duplicate' slug=project.slug as targeturl %}
+                                        {% include 'website/button.html' with disabled=False enabled=True type='default' icon='duplicate' text='' title='Duplicate' %}
                                         {% url 'website:create_transform_selection' slug=project.slug as targeturl %}
                                         {% include 'website/button.html' with disabled=False enabled=project.isDone type='success' icon='random' text='' title='Transform' %}
                                     </div>
