--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -69,10 +69,11 @@
                 <h4><strong>Discovered Projects:</strong> {{ project.projects.all|length|intcomma }}</h4>
                 <h4><strong>Projects Cloned:</strong> {{ cloned|intcomma }}</h4>
                 {% calc_finished_projects project as finished_count %}
+                {% calc_finished_projects project as retained_count %}
                 {% calc_remaining_projects project as remaining_count %}
                 {% calc_finished_percent finished_count remaining_count as finished_pct %}
                 {% if finished_count > 0 %}
-                    <h4><strong>Projects Retained:</strong> {{ finished_count|intcomma }}</h4>
+                    <h4><strong>Projects Retained:</strong> {{ retained_count|intcomma }}</h4>
                     {% if not project.isDone %}
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{ finished_pct }}" aria-valuemin="0" aria-valuemax="100" title="{{ finished_pct }}% complete" style="width: {{ finished_pct }}%">
@@ -84,7 +85,7 @@
                 {% if project.isDone %}
                     <br/>
                     <h4><strong>Dataset Generated:</strong> <span title="{{ project.fin_process }}">{{ project.fin_process|naturaltime }}</span></h4>
-                    {% if finished_count > 0 %}
+                    {% if retained_count > 0 %}
                         {% if download_size > 0 %}
                             <h3><strong><a href="{% url 'website:download_selection' project.slug %}">Download Dataset</a> (zip)</strong></h3>
                             <h4>({{ download_size|filesizeformat|intcomma }})</h4>
