--- a/website/templates/website/selections/list.html
+++ b/website/templates/website/selections/list.html
@@ -48,7 +48,7 @@
                             <td>{% if not project.isDone %}
                                 <span class="glyphicon glyphicon-refresh spinning" aria-hidden="true"></span> processing...
                             {% else %}
-                                {% calc_finished_projects project as finished_count %}
+                                {% calc_retained_projects project as finished_count %}
                                 {{ finished_count|intcomma }}
                             {% endif %}</td>
                             <td>
