--- a/website/templates/website/transforms/list.html
+++ b/website/templates/website/transforms/list.html
@@ -48,7 +48,7 @@
                                 {% if not transformer.isDone %}
                                     <span class="glyphicon glyphicon-refresh spinning" aria-hidden="true"></span> processing...
                                 {% else %}
-                                    {{ transformer.transformed_projects|length|intcomma }}
+                                    {{ transformer.result_projects|length|intcomma }}
                                 {% endif %}
                             </td>
                             <td>
