--- a/website/templates/website/transforms/detail.html
+++ b/website/templates/website/transforms/detail.html
@@ -68,9 +68,9 @@
                     </div>
                 {% endif %}
                 <br/>
-                <h4><strong>Input Projects:</strong> {{ input|intcomma }}</h4>
-                <h4><strong>Projects Transformed:</strong> {{ transformed|intcomma }}</h4>
-                {% calc_finished_percent transformed input as finished_pct %}
+                <h4><strong>Input Projects:</strong> {{ transformer.input_project_count|intcomma }}</h4>
+                <h4><strong>Projects Transformed:</strong> {{ transformer.project_count|intcomma }}</h4>
+                {% calc_finished_percent transformer.project_count transformer.remaining_count as finished_pct %}
                 {% if not transformer.isDone %}
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{ finished_pct }}" aria-valuemin="0" aria-valuemax="100" title="{{ finished_pct }}% complete" style="width: {{ finished_pct }}%">
@@ -79,7 +79,7 @@
                     </div>
                 {% endif %}
                 {% if transformed > 0 %}
-                    <h4><strong>Projects Retained:</strong> {{ retained|intcomma }}</h4>
+                    <h4><strong>Projects Retained:</strong> {{ transformer.retained_count|intcomma }}</h4>
                 {% endif %}
                 {% if transformer.isDone %}
                     <br/>
